texture_manual_verify.txt
  File "<string>", line 1
    import os, json; from PIL import Image, ImageEnhance; import numpy as np; print('--- STARTING TEXTURE VERIFICATION ---'); m_path = os.path.join('assets', 'textures', 'manifest.json'); f = open(m_path, 'r'); m = json.load(f); f.close(); t_name = 'rough_grey_pulp'; t_path = None; categories = m.get('categories', {}); for cat, data in categories.items(): \n    for tex in data.get('textures', []): \n        if os.path.splitext(tex['filename'])[0] == t_name: \n            t_path = os.path.join('assets', 'textures', tex['path'])\n            break\n    if t_path: break\nprint(f'Texture Path: {t_path}'); canvas = Image.new('RGB', (400, 400), color=(150, 150, 200)); base_image = canvas.convert('RGB'); texture_img = Image.open(t_path).resize(base_image.size).convert('RGB'); base_norm = np.array(base_image).astype(float) / 255.0; texture_norm = np.array(texture_img).astype(float) / 255.0; textured = np.clip((base_norm * 0.7 + texture_norm * 0.3) * 1.1, 0, 1); textured_image = Image.fromarray((textured * 255).astype(np.uint8)); ImageEnhance.Contrast(textured_image).enhance(1.1).save('test_textured_manual.png'); print('SUCCESS: test_textured_manual.png created')
                                                                                                                                                                                                                                                                                                                                 ^^^
SyntaxError: invalid syntax
